# ElectroPARTYogram

./: .gitmodules  MUMT307.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/xyz/sevag/animals_as_meter/: ExampleInstrumentedTest.kt
app/src/androidTest/java/xyz/sevag/electropartyogram/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMain.cpp  AudioEngine.cpp  AudioEngine.h  BTrack.cpp  BTrack.h  BTrackPrecomputed.h  BeatTracker.cpp  BeatTracker.h  CMakeLists.txt  CircularBuffer.h  DrawParams.h  GlobalParams.h  GraphicsLoop.cpp  GraphicsLoop.h  HammingWindow.cpp  HammingWindow.h  MathNeon.cpp  MathNeon.h  MathNeonLog10.cpp  Obtain.cpp  Obtain.h  OnsetDetection.cpp  OnsetDetection.h  PlayingCallback.cpp  PlayingCallback.h  Precomputed.h  RecordingCallback.cpp  RecordingCallback.h  SoundRecording.cpp  SoundRecording.h  VulkanMain.cpp  VulkanMain.h  Window.h  jni_bridge.cpp  logging_macros.h  native-lib.cpp
app/src/main/cpp/SFML/src/SFML/Audio/: CMakeLists.txt
app/src/main/cpp/SFML/src/SFML/Main/: MainAndroid.cpp
app/src/main/java/xyz/sevag/animals_as_meter/: AudioEngine.kt  MainActivity.kt  UiHelper.kt  Utils.kt
app/src/main/java/xyz/sevag/electropartyogram/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/xyz/sevag/animals_as_meter/: ExampleUnitTest.kt
app/src/test/java/xyz/sevag/electropartyogram/: ExampleUnitTest.kt
doc/: MUMT307.md
example-videos/: animals_as_leaders_the_woven_web.webm  roni_size_new_forms.webm
gradle/wrapper/: gradle-wrapper.properties
